--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
         /* CSS */
         body {
-            background-image: url('6.jpeg');
+            background-image: url('invicta.png');
             background-size: cover; /* Ensure the background image covers the entire screen */
             background-position: center; /* Center the background image */
             background-repeat: no-repeat; /* Prevent the background image from repeating */
